boostrap action for the cluster removed
the bootstrap action populated the ~/.aws/credentials file for the emr.py final activity.
Recently "regular" roles were introduced and the emr.py doesn't require a credentials any more.

--- a/data-pipe-line.template
+++ b/data-pipe-line.template
@@ -57,8 +57,7 @@
       "type" : "EmrCluster",
       "terminateAfter" : "55 Minutes",
       "resourceRole": "DataPipelineDefaultResourceRole",
-      "role": "DataPipelineDefaultRole",
-      "bootstrapAction": "s3://#{myBucketName}/boto-cfg.sh"
+      "role": "DataPipelineDefaultRole"
     }
   ],
   "parameters": [
